Add tailwind small config

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,3 +11,13 @@
 }
 
 */
+ html {
+  -webkit-font-smoothing: antialiased;
+ }
+ nav a.active {
+  @apply inline-flex items-center border-b-2 border-orange-500 px-1 pt-1 text-sm font-medium text-gray-900;
+ }
+
+ nav a {
+  @apply inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700;
+ }
