--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -14,10 +14,22 @@
  html {
   -webkit-font-smoothing: antialiased;
  }
- nav a.active {
+ nav.nav a.active {
   @apply inline-flex items-center border-b-2 border-orange-500 px-1 pt-1 text-sm font-medium text-gray-900;
  }
 
- nav a {
+ nav.nav a {
   @apply inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700;
+ }
+
+ nav.subnav a.active {
+  @apply bg-gray-200 text-gray-800 rounded-md px-3 py-2 text-xs font-medium;
+ }
+
+ nav.subnav a {
+  @apply text-gray-600 hover:text-gray-800 rounded-md px-3 py-2 text-xs font-medium;
+ }
+
+ nav.sidenav a.active span {
+  @apply text-orange-500 border-orange-400;
  }
