start seed + front work

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="bg-white/70 shadow-sm backdrop-blur-lg z-50 nav">
+<nav class="bg-white/70 shadow-sm backdrop-blur-lg sticky top-0 z-50 nav">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 justify-between">
       <div class="flex">
