--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,186 +1,107 @@
-<div class="px-20 py-4 bg-gray-100 hidden">
-  <div class="hidden sm:block">
-    <nav class="flex space-x-1 subnav" aria-label="Tabs">
-      <% @categories.each do |category| %>
-        <%= active_link_to category.name, category_path(category) %>
-      <% end %>
+<div class="w-full min-h-screen flex relative">
+  <section class="h-full w-60 sticky top-20 px-5 py-4 border-r border-gray-100">
+    <nav class="flex flex-1 flex-col sidenav" aria-label="Sidebar">
+      <ul role="list" class="flex flex-1 flex-col gap-y-7">
+        <li>
+          <div class="text-xs font-semibold leading-6 text-gray-400">Catégories</div>
+          <ul role="list" class="-mx-2 mt-2 space-y-1">
+            <% @categories.each do |category| %>
+              <li>
+                <%= active_link_to category_path(category), class: '"text-gray-700 hover:text-orange-500 hover:bg-gray-50 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-medium' do %>
+                  <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border text-[0.625rem] font-medium bg-white text-gray-400 border-gray-200 group-hover:border-orange-500 group-hover:text-orange-600"><%= category.name.first.upcase %></span>
+                  <span class="truncate"><%= category.name %></span>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </li>
+      </ul>
     </nav>
-  </div>
-</div>
+  </section>
 
-<div class="flex h-screen flex-col">
-  <div class="flex w-full h-full items-start gap-x-8 relative">
-    <aside class="sticky top-0 h-full w-60 px-5 py-4 border-r border-gray-100">
-
-
-      <nav class="flex flex-1 flex-col sidenav" aria-label="Sidebar">
-        <ul role="list" class="flex flex-1 flex-col gap-y-7">
-          <li>
-            <div class="text-xs font-semibold leading-6 text-gray-400">Catégories</div>
-            <ul role="list" class="-mx-2 mt-2 space-y-1">
-              <% @categories.each do |category| %>
-                <li>
-                  <%= active_link_to category_path(category), class: '"text-gray-700 hover:text-orange-500 hover:bg-gray-50 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-medium' do %>
-                    <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border text-[0.625rem] font-medium bg-white text-gray-400 border-gray-200 group-hover:border-orange-500 group-hover:text-orange-600"><%= category.name.first.upcase %></span>
-                    <span class="truncate"><%= category.name %></span>
-                  <% end %>
-                </li>
-              <% end %>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-
-    </aside>
-
-    <main class="flex-1">
-      <div class="bg-gray-50">
-  <main>
-    <!-- Product -->
-    <div class="bg-white">
-      <div class="mx-auto max-w-2xl px-4 pb-24 pt-16 sm:px-6 sm:pb-32 sm:pt-24 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
-        <!-- Product details -->
-        <div class="lg:max-w-lg lg:self-end">
-          <nav aria-label="Breadcrumb">
-            <ol role="list" class="flex items-center space-x-2">
-              <li>
-                <div class="flex items-center text-sm">
-                  <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Travel</a>
-                  <svg viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" class="ml-2 h-5 w-5 flex-shrink-0 text-gray-300">
-                    <path d="M5.555 17.776l8-16 .894.448-8 16-.894-.448z" />
-                  </svg>
-                </div>
-              </li>
-              <li>
-                <div class="flex items-center text-sm">
-                  <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Bags</a>
-                </div>
-              </li>
-            </ol>
-          </nav>
-
-          <div class="mt-4">
-            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Everyday Ruck Snack</h1>
+  <section class="h-full grow bg-gray-100 p-20">
+    <% @category.products.each do |product| %>
+      <div class="card w-full mb-8">
+        <div class="flex">
+          <div class="w-2/3 p-8">
+            <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-2xl"><%= product.name %></h1>
+            <p class="text-sm font-semibold text-orange-400"><%= product.description %></p>
           </div>
-
-          <section aria-labelledby="information-heading" class="mt-4">
-            <h2 id="information-heading" class="sr-only">Product information</h2>
-
-            <div class="flex items-center">
-              <p class="text-lg text-gray-900 sm:text-xl">$220</p>
-
-              <div class="ml-4 border-l border-gray-300 pl-4">
-                <h2 class="sr-only">Reviews</h2>
-                <div class="flex items-center">
-                  <div>
-                    <div class="flex items-center">
-                      <!-- Active: "text-yellow-400", Default: "text-gray-300" -->
-                      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
-                      </svg>
-                      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
-                      </svg>
-                      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
-                      </svg>
-                      <svg class="text-yellow-400 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
-                      </svg>
-                      <svg class="text-gray-300 h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401z" clip-rule="evenodd" />
-                      </svg>
-                    </div>
-                    <p class="sr-only">4 out of 5 stars</p>
-                  </div>
-                  <p class="ml-2 text-sm text-gray-500">1624 reviews</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="mt-4 space-y-6">
-              <p class="text-base text-gray-500">Don&#039;t compromise on snack-carrying capacity with this lightweight and spacious bag. The drawstring top keeps all your favorite chips, crisps, fries, biscuits, crackers, and cookies secure.</p>
-            </div>
-
-            <div class="mt-6 flex items-center">
-              <svg class="h-5 w-5 flex-shrink-0 text-green-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
-              </svg>
-              <p class="ml-2 text-sm text-gray-500">In stock and ready to ship</p>
-            </div>
-          </section>
-        </div>
-
-        <!-- Product image -->
-        <div class="mt-10 lg:col-start-2 lg:row-span-2 lg:mt-0 lg:self-center">
-          <div class="aspect-h-1 aspect-w-1 overflow-hidden rounded-lg">
-            <img src="https://tailwindui.com/img/ecommerce-images/product-page-04-featured-product-shot.jpg" alt="Light green canvas bag with black straps, handle, front zipper pouch, and drawstring top." class="h-full w-full object-cover object-center">
+          <div class="w-1/3 p-8">
+            Image here
           </div>
         </div>
 
-        <!-- Product form -->
-        <div class="mt-10 lg:col-start-1 lg:row-start-2 lg:max-w-lg lg:self-start">
-          <section aria-labelledby="options-heading">
-            <h2 id="options-heading" class="sr-only">Product options</h2>
+        <div class="border-t border-b border-gray-100 flex w-full">
+          <div class="w-1/2 p-8">
+            <h3 class="text-sm font-semibold text-gray-900">Infos</h3>
+            <p class="text-sm text-gray-500 mt-4 font-medium leading-6"><%= product.infos %></p>
+          </div>
 
-            <form>
-              <div class="sm:flex sm:justify-between">
-                <!-- Size selector -->
-                <fieldset>
-                  <legend class="block text-sm font-medium text-gray-700">Size</legend>
-                  <div class="mt-1 grid grid-cols-1 gap-4 sm:grid-cols-2">
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <div class="relative block cursor-pointer rounded-lg border border-gray-300 p-4 focus:outline-none">
-                      <input type="radio" name="size-choice" value="18L" class="sr-only" aria-labelledby="size-choice-0-label" aria-describedby="size-choice-0-description">
-                      <p id="size-choice-0-label" class="text-base font-medium text-gray-900">18L</p>
-                      <p id="size-choice-0-description" class="mt-1 text-sm text-gray-500">Perfect for a reasonable amount of snacks.</p>
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <div class="pointer-events-none absolute -inset-px rounded-lg border-2" aria-hidden="true"></div>
-                    </div>
-                    <!-- Active: "ring-2 ring-indigo-500" -->
-                    <div class="relative block cursor-pointer rounded-lg border border-gray-300 p-4 focus:outline-none">
-                      <input type="radio" name="size-choice" value="20L" class="sr-only" aria-labelledby="size-choice-1-label" aria-describedby="size-choice-1-description">
-                      <p id="size-choice-1-label" class="text-base font-medium text-gray-900">20L</p>
-                      <p id="size-choice-1-description" class="mt-1 text-sm text-gray-500">Enough room for a serious amount of snacks.</p>
-                      <!--
-                        Active: "border", Not Active: "border-2"
-                        Checked: "border-indigo-500", Not Checked: "border-transparent"
-                      -->
-                      <div class="pointer-events-none absolute -inset-px rounded-lg border-2" aria-hidden="true"></div>
-                    </div>
-                  </div>
-                </fieldset>
-              </div>
-              <div class="mt-4">
-                <a href="#" class="group inline-flex text-sm text-gray-500 hover:text-gray-700">
-                  <span>What size should I buy?</span>
-                  <svg class="ml-2 h-5 w-5 flex-shrink-0 text-gray-400 group-hover:text-gray-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zM8.94 6.94a.75.75 0 11-1.061-1.061 3 3 0 112.871 5.026v.345a.75.75 0 01-1.5 0v-.5c0-.72.57-1.172 1.081-1.287A1.5 1.5 0 108.94 6.94zM10 15a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
-                  </svg>
-                </a>
-              </div>
-              <div class="mt-10">
-                <button type="submit" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-50">Add to bag</button>
-              </div>
-              <div class="mt-6 text-center">
-                <a href="#" class="group inline-flex text-base font-medium">
-                  <svg class="mr-2 h-6 w-6 flex-shrink-0 text-gray-400 group-hover:text-gray-500" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285z" />
-                  </svg>
-                  <span class="text-gray-500 hover:text-gray-700">Lifetime Guarantee</span>
-                </a>
-              </div>
-            </form>
-          </section>
+          <div class="w-1/2 p-8">
+            <h3 class="text-sm font-medium text-gray-900">Options</h3>
+            <div class="prose prose-sm mt-4 text-gray-500">
+              <ul role="list">
+                <% product.options.each do |option| %>
+                  <li><%= option.content %></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
         </div>
+
+        <section aria-labelledby="policies-heading" class="mt-10 w-1/2 hidden">
+
+          <dl class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-1 xl:grid-cols-2">
+            <div class="rounded-lg border border-gray-200 bg-gray-50 p-6 text-center">
+              <dt>
+                <svg class="mx-auto h-6 w-6 flex-shrink-0 text-gray-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64" />
+                </svg>
+                <span class="mt-4 text-sm font-medium text-gray-900">International delivery</span>
+              </dt>
+              <dd class="mt-1 text-sm text-gray-500">Get your order in 2 years</dd>
+            </div>
+            <div class="rounded-lg border border-gray-200 bg-gray-50 p-6 text-center">
+              <dt>
+                <svg class="mx-auto h-6 w-6 flex-shrink-0 text-gray-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <span class="mt-4 text-sm font-medium text-gray-900">Loyalty rewards</span>
+              </dt>
+              <dd class="mt-1 text-sm text-gray-500">Don&#039;t look at other tees</dd>
+            </div>
+          </dl>
+        </section>
+
+        <div class="py-4 px-8">
+          <div class="flex">
+            <div class="flex space-x-8">
+              <div class="flex items-center text-sm font-medium text-yellow-400">
+                <svg class="mr-2 h-6 w-6 flex-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
+                </svg>
+                <p class="text-gray-600 font-semibold">Sur mesure</p>
+              </div>
+              <div class="flex items-center text-sm font-medium text-yellow-400">
+                <svg class="mr-2 h-6 w-6 flex-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
+                </svg>
+                <p class="text-gray-600 font-semibold"><%= "#{product.warranty} ans de garantie" %></p>
+              </div>
+              <div class="flex items-center text-sm font-medium text-yellow-400">
+                <svg class="mr-2 h-6 w-6 flex-none" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5" />
+                </svg>
+                <p class="text-gray-600 font-semibold">Devis gratuit</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
       </div>
-    </div>
-  </main>
-</div>
-    </main>
-
-  </div>
+    <% end %>
+  </section>
 </div>
