--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -21,48 +21,15 @@
 
   <section class="h-full grow bg-gray-50 p-20">
 
-    <nav class="flex" aria-label="Breadcrumb">
-      <ol role="list" class="flex items-center space-x-4">
-        <li>
-          <div>
-            <a href="#" class="text-gray-400 hover:text-gray-500">
-              <svg class="h-5 w-5 flex-shrink-0" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd" d="M9.293 2.293a1 1 0 011.414 0l7 7A1 1 0 0117 11h-1v6a1 1 0 01-1 1h-2a1 1 0 01-1-1v-3a1 1 0 00-1-1H9a1 1 0 00-1 1v3a1 1 0 01-1 1H5a1 1 0 01-1-1v-6H3a1 1 0 01-.707-1.707l7-7z" clip-rule="evenodd" />
-              </svg>
-              <span class="sr-only">Home</span>
-            </a>
-          </div>
-        </li>
-        <li>
-          <div class="flex items-center">
-            <svg class="h-5 w-5 flex-shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
-            </svg>
-            <a href="#" class="ml-4 text-sm font-medium text-gray-500 hover:text-gray-700">Projects</a>
-          </div>
-        </li>
-        <li>
-          <div class="flex items-center">
-            <svg class="h-5 w-5 flex-shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-              <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
-            </svg>
-            <a href="#" class="ml-4 text-sm font-medium text-gray-500 hover:text-gray-700" aria-current="page">Project Nero</a>
-          </div>
-        </li>
-      </ol>
-    </nav>
-
-
-
     <% @category.products.each do |product| %>
       <div class="card w-full mb-8 border border-gray-100">
         <div class="flex">
-          <div class="w-2/3 p-8">
+          <div class="w-1/2 p-8">
             <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-2xl"><%= product.name %></h1>
             <p class="text-sm font-semibold text-orange-400"><%= product.description %></p>
           </div>
-          <div class="w-1/3 p-8">
-            Image here
+          <div class="w-1/2">
+            <div class="w-full min-h-40 bg-slate-100"></div>
           </div>
         </div>
 
