add active storage + migration for categories

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,8 +8,9 @@
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:grid lg:grid-cols-2 lg:px-8">
             <div class="mx-auto max-w-2xl py-24 lg:max-w-none lg:py-64">
               <div class="lg:pr-16">
-                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl xl:text-6xl">Focus on what matters</h1>
-                <p class="mt-4 text-xl text-gray-600">All the charts, datepickers, and notifications in the world can't beat checking off some items on a paper card.</p>
+                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl xl:text-6xl">Les artisans du store</h1>
+                <p class="mt-4 text-xl text-gray-600">
+Les artisans du store dans le Rhône, c'est plus de 35 ans d'expérience à votre service. Venez nous rendre visite dans notre espace "Gallery" afin de découvrir notre large gamme de stores, fermetures et protections solaires</p>
                 <div class="mt-6">
                   <a href="#" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 font-medium text-white hover:bg-indigo-700">Shop Productivity</a>
                 </div>
