remove navbar partial call + replace with component

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main>
-      <%= render 'layouts/navbar' %>
+      <%= render NavbarComponent.new %>
       <%= yield %>
     </main>
   </body>
