--- a/app/components/serviceslist_component.html.erb
+++ b/app/components/serviceslist_component.html.erb
@@ -1,4 +1,4 @@
-<div class="p-10 border-b border-gray-100">
+<div class="p-8 border-b border-gray-100 bg-white">
   <div class="flex space-x-3 items-center justify-start flex-wrap">
     <% if @service.free_quote %>
       <div class="flex flex-col space-y-2 items-center p-4 bg-lime-50 rounded-lg w-32 border border-lime-200">
