change events flashes + change admin

--- a/app/components/footer_component.html.erb
+++ b/app/components/footer_component.html.erb
@@ -16,10 +16,10 @@
     </div>
     <div class="mt-8 md:order-1 md:mt-0 flex items-center space-x-1">
       <p class="text-xs leading-6 font-bold text-gray-600 text-center">&copy; Lads 2024</p>
-      <p class="text-xs leading-6 font-medium text-gray-600 text-center">- Made with</p>
-      <%= inline_svg_tag("icons/heart.svg", class: "h-4 w-4 fill-red-400")%>
-      <p class="text-xs leading-6 font-medium text-gray-600 text-center">by</p>
-      <p class="font-semibold text-red-400 text-xs leading-6">Aurélien Galoppe</p>
+      <p class="text-[10px] leading-6 font-medium text-gray-600 text-center">- Made with</p>
+      <%= inline_svg_tag("icons/heart.svg", class: "h-3 w-3 fill-red-400")%>
+      <p class="text-[10px] leading-6 font-medium text-gray-600 text-center">by</p>
+      <p class="font-semibold text-gray-700 text-[10px] leading-6">Aurélien Galoppe</p>
     </div>
   </div>
 </footer>
