--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render FlashesComponent.new(flash) %>
-    <main class="h-dvh flex w-full">
+    <main class="flex w-full">
       <%= render Admin::NavbarComponent.new %>
       <div class="w-full">
         <%= yield %>
