--- a/app/components/admin/navbar_component.html.erb
+++ b/app/components/admin/navbar_component.html.erb
@@ -1,5 +1,5 @@
  <!-- Static sidebar for desktop -->
-<div class="flex w-72 flex-col">
+<div class="flex w-72 flex-col sticky top-0 h-screen">
   <!-- Sidebar component, swap this element with another sidebar if you like -->
   <div class="flex grow flex-col gap-y-5 overflow-y-auto border-r border-gray-200 bg-white px-6">
     <div class="flex h-16 shrink-0 items-center">
