--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,7 +15,7 @@
     <%= render FlashesComponent.new(flash) %>
     <main class="flex w-full">
       <%= render Admin::NavbarComponent.new %>
-      <div class="w-full">
+      <div class="w-10/12">
         <%= yield %>
       </div>
     </main>
