add a lot of things 4

--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -1,11 +1,11 @@
 <nav class="bg-white/70 shadow-sm backdrop-blur-lg sticky top-0 z-50 nav">
-  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="flex h-16 justify-between">
+  <div class="px-4 pl-10">
+    <div class="flex h-14 justify-between">
       <div class="flex">
         <div class="flex flex-shrink-0 items-center">
-          <%= inline_svg_tag("logos/ads-without-text.svg") %>
+          <div><%= inline_svg_tag("logos/ads-logo-full-cleaned.svg", class: "h-6 w-6 shrink-0 text-orange-500 mr-3") %></div>
         </div>
-        <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+        <div class="hidden sm:ml-6 sm:flex sm:space-x-6">
           <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
           <%= active_link_to 'Accueil', root_path, active: :exclusive %>
           <%= active_link_to 'Produits', categories_path %>
