--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,27 +3,20 @@
 <div class="bg-white">
   <main>
     <!-- Hero -->
-    <div class="flex flex-col border-b border-gray-200 lg:border-0">
-      <div class="relative">
-        <div aria-hidden="true" class="absolute hidden h-full w-1/2 bg-gray-100 lg:block"></div>
-        <div class="relative bg-gray-100 lg:bg-transparent">
-          <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:grid lg:grid-cols-2 lg:px-8">
-            <div class="mx-auto max-w-2xl py-24 lg:max-w-none lg:py-64">
-              <div class="lg:pr-16">
-                <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl xl:text-6xl">Les artisans du store</h1>
-                <p class="mt-4 text-xl text-gray-600">
-Les artisans du store dans le Rhône, c'est plus de 35 ans d'expérience à votre service. Venez nous rendre visite dans notre espace "Gallery" afin de découvrir notre large gamme de stores, fermetures et protections solaires</p>
-                <div class="mt-6">
-                  <a href="#" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 font-medium text-white hover:bg-indigo-700">Shop Productivity</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="h-48 w-full sm:h-64 lg:absolute lg:right-0 lg:top-0 lg:h-full lg:w-1/2">
-          <%= cl_image_tag(@photo.key, crop: :scale, class: "h-full w-full object-cover object-center") %>
-        </div>
+    <div class="flex border-b border-gray-200 h-[400px]">
+
+      <div class="w-1/3 p-8 flex flex-col items-center justify-center">
+        <div><%= inline_svg_tag("logos/ads-logo-full-cleaned.svg", class: "h-10 w-10 shrink-0 text-orange-500") %></div>
+        <h1 class="text-lg font-bold tracking-tight text-gray-900 mt-2">Les artisans du store</h1>
+        <p class="mt-4 text-sm text-gray-700">Les artisans du store dans le Rhône, c'est plus de 35 ans d'expérience à votre service. Venez nous rendre visite dans notre espace "Gallery" afin de découvrir notre large gamme de stores, fermetures et protections solaires</p>
       </div>
+
+      <div class="w-2/3 h-full">
+        <% if @carousel_products.any? %>
+          <%= render CarouselComponent.new(@carousel_products) %>
+        <% end %>
+      </div>
+
     </div>
 
     <!-- Trending products -->
