--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -4,19 +4,53 @@
   <div class="main">
 
     <div class="flex">
-      <div class="w-1/2">
+      <div class="w-2/4">
         <div class="flex items-center space-x-3 border-b h-12 pl-4">
           <div class="text-sm font-medium text-slate-700">Infos</div>
         </div>
 
         <div class="p-8">
-          <%= f.input :name %>
-          <%= f.input :description %>
+          <div class="mb-6 flex space-x-8">
+            <div class="w-1/2">
+              <%= f.input :name, label: "Nom", wrapper: :admin_form %>
+            </div>
+            <div class="w-1/2">
+              <%= f.input :category_id, as: :select, label: "Catégorie", wrapper: :admin_form, collection: Category.all, label_method: :name, value_method: :id, include_blank: "Sélectionnez une catégorie" %>
+            </div>
+          </div>
+
+          <%= f.input :description, as: :text, label: "Description", wrapper: :admin_form %>
+
         </div>
 
       </div>
 
-      <div class="w-1/2">
+
+      <div class="w-1/4">
+        <div class="flex items-center space-x-3 border-b h-12 pl-4 border-l">
+          <div class="text-sm font-medium text-slate-700">Motoristes</div>
+          <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= @product.motorists.size %></span>
+        </div>
+
+        <div class="h-80 border-l">
+          <div class="flex flex-col">
+            <%= f.collection_check_boxes :motorist_ids, Motorist.all, :id, :name do |b| %>
+              <div class="checkbox-wrapper w-full relative">
+                <%= b.check_box(class: "peer hidden") %>
+                <%= inline_svg_tag("icons/check-circle.svg", class: "h-4 w-4 shrink-0 mr-2 hidden peer-checked:flex peer-checked:text-violet-600 absolute left-4 top-1/3 transition") %>
+                <%= inline_svg_tag("icons/circle-empty.svg", class: "h-4 w-4 shrink-0 mr-2 peer-checked:hidden absolute left-4 top-1/3 text-gray-300 transition") %>
+                <div class="h-4 w-4 shrink-0 mr-2 peer-checked:hidden absolute left-4 top-1/3"></div>
+                <%= b.label(class: 'cursor-pointer text-xs flex items-center justify-start space-x-2 border-b px-10 py-4 font-bold text-gray-700 peer-checked:bg-violet-50 peer-checked:border-violet-100 peer-checked:text-violet-600') do %>
+                  <%= inline_svg_tag("icons/check-circle.svg", class: "h-4 w-4 shrink-0 mr-2 hidden peer-checked:flex") %>
+                  <div><%= b.text %></div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-1/4">
         <div class="flex items-center space-x-3 border-b h-12 pl-4 border-l">
           <div class="text-sm font-medium text-slate-700">Ral</div>
           <span class="inline-flex items-center rounded bg-purple-50 px-2.5 py-1.5 text-[9px] font-bold text-purple-700 ring-1 ring-inset ring-purple-700/10"><%= @product.rals.size %></span>
@@ -36,6 +70,8 @@
           </div>
         </div>
       </div>
+
+
     </div>
 
     <% if @product.images.attached? %>
@@ -182,11 +218,11 @@
                   <% end %>
                 </div>
                 <div class="flex shrink-0 items-center gap-x-4">
-                  <%= inline_svg_tag("icons/dragging.svg", class: "h-5 w-5 shrink-0 text-gray-600")%>
+                  <%= inline_svg_tag("icons/dragging.svg", class: "h-4 w-4 shrink-0 text-gray-600")%>
 
                   <%= link_to admin_product_option_path(@product, option), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure ?', turbo_stream: true }, remote: true do %>
                     <div class="flex space-x-3 items-center">
-                      <%= inline_svg_tag("icons/minus-circle.svg", class: "h-5 w-5 shrink-0 text-red-500") %>
+                      <%= inline_svg_tag("icons/minus-circle.svg", class: "h-4 w-4 shrink-0 text-red-500") %>
                     </div>
                   <% end %>
                 </div>
