change home page

--- a/app/components/carousel_component.html.erb
+++ b/app/components/carousel_component.html.erb
@@ -1,6 +1,12 @@
 <div data-controller="carousel" class="relative overflow-hidden h-full">
   <!-- Conteneur des éléments du carousel -->
 
+  <div class="w-full h-full p-10 flex flex-col items-center justify-center absolute top-0 left-0 bg-transparent z-10">
+    <div><%= inline_svg_tag("logos/ads-logo-full-cleaned.svg", class: "h-14 w-14 shrink-0 text-orange-500") %></div>
+    <h1 class="text-2xl font-bold tracking-tight text-gray-900 mt-2">Les Artisans du Store</h1>
+    <p class="mt-4 text-md text-white px-20 w-2/3 text-center">Notre Savoir-Faire pour un engagement durable</p>
+  </div>
+
   <div data-carousel-target="container" class="flex transform transition-transform duration-300 h-full">
     <% @products.each_with_index do |product, index| %>
       <div class="w-full flex-shrink-0 h-full relative">
@@ -22,11 +28,11 @@
 
 
   <!-- Boutons pour navigation -->
-  <%= link_to "#", data: { action: "click->carousel#previous" }, class: "absolute left-4 top-1/2 transform -translate-y-1/2 p-2" do %>
+  <%= link_to "#", data: { action: "click->carousel#previous" }, class: "absolute left-4 top-1/2 transform -translate-y-1/2 p-2 z-20" do %>
     <%= inline_svg_tag("icons/arrow-left-circle.svg", class: "h-6 w-6 shrink-0 text-white") %>
   <% end %>
 
-  <%= link_to "#", data: { action: "click->carousel#next" }, class: "absolute right-4 top-1/2 transform -translate-y-1/2 p-2" do %>
+  <%= link_to "#", data: { action: "click->carousel#next" }, class: "absolute right-4 top-1/2 transform -translate-y-1/2 p-2 z-20" do %>
     <%= inline_svg_tag("icons/arrow-right-circle.svg", class: "h-6 w-6 shrink-0 text-white") %>
   <% end %>
 
