debug photo modal

--- a/app/components/photoslist_component.html.erb
+++ b/app/components/photoslist_component.html.erb
@@ -39,7 +39,7 @@
       <img data-modal-target="image"
            src=""
            alt="Photo agrandie"
-           class="max-w-full">
+           class="object-cover object-center">
     </div>
   </div>
 </div>
